@@ -18,8 +18,10 @@ This section summarizes the changes in each release.
 
 --
 
-include::release-notes/8.1.asciidoc[]
-include::release-notes/8.0.asciidoc[]
+include::release-notes/8.1.1.asciidoc[]
+include::release-notes/8.1.0.asciidoc[]
+include::release-notes/8.0.1.asciidoc[]
+include::release-notes/8.0.0.asciidoc[]
 include::release-notes/8.0.0-rc2.asciidoc[]
 include::release-notes/8.0.0-rc1.asciidoc[]
 include::release-notes/8.0.0-beta1.asciidoc[]
